Added mouse button text and minor touch ups

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A 2D canvas game framework with a tiny size but a big heart.",
   "main": "src/engine/core.js",
   "scripts": {
-    "start": "npm run server && npm run watch & npm run watchify",
-    "watch": "npm run watchImageAssets & npm run watchDataAssets & npm run watchEntities & npm run watchScenes",
+    "start": "npm run server & npm run watch & npm run watchify",
+    "watch": "npm run watchImageAssets & npm run watchDataAssets & npm run watchEntities & npm run watchScenes & npm run watchAudioAssets",
     "watchAssets": "npm run watchImageAssets & npm run watchDataAssets",
-    "watchImageAssets": "watch -t ./src/tools/assetsWatcher.js ./images",
-    "watchDataAssets": "watch -t ./src/tools/assetsWatcher.js ./data",
-    "watchEntities": "watch -t ./src/tools/entitiesWatcher.js ./src/scenes",
-    "watchScenes": "watch -t ./src/tools/scenesWatcher.js ./src/entities",
+    "watchImageAssets": "watch --no-title ./src/tools/assetsWatcher.js ./images",
+    "watchDataAssets": "watch --no-title ./src/tools/assetsWatcher.js ./data",
+    "watchAudioAssets": "watch --no-title ./src/tools/assetsWatcher.js ./audio",
+    "watchEntities": "watch --no-title ./src/tools/entitiesWatcher.js ./src/scenes",
+    "watchScenes": "watch --no-title ./src/tools/scenesWatcher.js ./src/entities",
     "assets": "./src/tools/assetsWatcher.js",
     "entities": "./src/tools/entitiesWatcher.js",
     "scenes": "./src/tools/scenesWatcher.js",
