--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: ottorobba@gmail.com
 author: Otto Robba
 description: "Educational blog on game design and development, including topics like programming, tools, workflow and techniques."
 url: "http://ottorobba.github.io/ox/"
+baseurl: "http://ottorobba.github.io/ox/"
 google_analytics: UA-55865997-1
 
 #gems: [jekyll-sitemap]
