--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: ox - 2d canvas game framework
 email: ottorobba@gmail.com
 author: Otto Robba
 description: "Educational blog on game design and development, including topics like programming, tools, workflow and techniques."
-url: "http://ottorobba.github.io/ox/"
-baseurl: "http://ottorobba.github.io/ox/"
+url: "http://ottorobba.github.io/ox"
+baseurl: "http://ottorobba.github.io/ox"
 google_analytics: UA-55865997-1
 
 #gems: [jekyll-sitemap]
