Fix npm build scripts in windows

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
         "watchAudioAssets": "watch --no-title ./src/tools/assetsWatcher.js ./audio",
         "watchEntities": "watch --no-title ./src/tools/entitiesWatcher.js ./src/entities",
         "watchScenes": "watch --no-title ./src/tools/scenesWatcher.js ./src/scenes",
-        "assets": "./src/tools/assetsWatcher.js",
-        "entities": "./src/tools/entitiesWatcher.js",
-        "scenes": "./src/tools/scenesWatcher.js",
+        "assets": "node ./src/tools/assetsWatcher.js",
+        "entities": "node ./src/tools/entitiesWatcher.js",
+        "scenes": "node ./src/tools/scenesWatcher.js",
         "server": "browser-sync start --server --files './ox.js'",
         "watchify": "watchify src/engine/core.js -o ./ox.js -v -d",
         "build": "browserify src/engine/core.js -o ./ox.js",
